crates/board-tui/tests/snapshots/snapshots__size_matrix_card_detail_popup_and_fullscreen__card_detail_fullscreen_40x20.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
"┌ Card #5: Refactor auth mod… [f Popup]┐"
"│status────────────────────────────────│"
"│✗ failed                              │"
"│harness: claude   model: opus   effort│"
"│permission: plan   session: default   │"
"│description───────────────────────────│"
"│Split the auth module into token +    │"
"│comments──────────────────────────────│"
"│ [agent:1] Plan ready at              │"
"│docs/plans/auth.md                    │"
"│ [agent:2] Reviewer: tests missing for│"
"│token refresh                         │"
"│▸[system] Refactor failed in 3m10s -> │"
"│Execute                               │"
"│[Edit] [Del] [Hist]                   │"
"│runs──────────────────────────────────│"
"│#2 claude · ok · 0s                   │"
"│#3 claude · fail · 0s                 │"
"└──────────────────────────────────────┘"
"? help                                  "
