crates/board-tui/tests/snapshots/snapshots__size_matrix_card_detail_popup_and_fullscreen__card_detail_fullscreen_52x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
"[ Project: Global ]  [ Active ] [ All ] [ Archived ]"
"                  [ Board: main ]                   "
"[ ‹ ]      [ Review (A) · 4/6 · 2 cards ]      [ › ]"
"────────────────────────────────────────────────────"
"┌ Card #5: Refactor auth module         [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────┐│"
"││✗ failed                                        ││"
"│└────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────┐│"
"││Harness · Model: claude · opus · effort medium ·││"
"││perm plan                                       ││"
"│└────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────┐│"
"││Herdr session: default session · Space:         ││"
"││workspace:-                                     ││"
"│└────────────────────────────────────────────────┘│"
"│ [ Edit ]   [ Duplicate ]   [ Archive ]   [ Add ] │"
"│ [ Open ]    [ Reopen ]    [ Retry ]   [ Cancel ] │"
"│                                                  │"
"│                                                  │"
"└──────────────────────────────────────────────────┘"
" [ + New card ]    [ Open card ]   [ Archive card ] "
"[ + New column ]  [ Edit column ]  [ Delete column ]"
" [ Move column ]    [ Template ]      [ ? Help ]    "
