crates/board-tui/tests/snapshots/snapshots__size_matrix_card_detail_popup_and_fullscreen__card_detail_popup_40x20.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
"[ Project: Gl… ] [ Act ] [ All ] [ Arc ]"
"            [ Board: main ]             "
"[ ‹ ][ Review (A) · 4/6 · 2 cards ][ › ]"
"────────────────────────────────────────"
"┌ Card #5: Refactor auth m… [ X ] [ □ ]┐"
"│┌Status──────────────────────────────┐│"
"││✗ failed                            ││"
"│└────────────────────────────────────┘│"
"│┌Task Configuration──────────────────┐│"
"││Harness · Model: claude · opus · ef…││"
"││Herdr session: default session · Sp…││"
"│└────────────────────────────────────┘│"
"│ [ Edit ]  [ Duplicate ]  [ Archive ] │"
"│               [ Add ]                │"
"│ [ Open ]    [ Reopen ]    [ Retry ]  │"
"│              [ Cancel ]              │"
"└──────────────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] "
"[ + Column ]  [ Edit col ]  [ Del col ] "
"[ Move col ]  [ Template ]  [ ? Help ]  "
