crates/board-tui/tests/snapshots/snapshots__size_matrix_card_detail_popup_and_fullscreen__card_detail_popup_52x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
" ◈ herdr-board          [ Board: Global ▾ ]         "
"            Visible: [ Active ] [ All ] [ Archived ]"
"[ ‹ ]     [ Review · 4/6 · 2 cards · ▶1 ]      [ › ]"
"────────────────────────────────────────────────────"
"┌ Card #5: Refactor auth module         [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────┐│"
"││✗ failed                                        ││"
"│└────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────┐│"
"││Harness · Model: claude · opus · effort medium ·││"
"││perm plan                                       ││"
"│└────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────┐│"
"││Herdr session: default · Space: workspace:-     ││"
"│└────────────────────────────────────────────────┘│"
"│    [ Edit ]        [ Archive ]        [ Add ]    │"
"│   [ Open ]        [ Retry ]        [ Cancel ]    │"
"│                                                  │"
"│                                                  │"
"└──────────────────────────────────────────────────┘"
" [ + New card ]    [ Open card ]   [ Archive card ] "
"[ + New column ]  [ Edit column ]  [ Delete column ]"
" [ Move column ]    [ Template ]      [ ? Help ]    "
"q/Esc close · f popup/fullscreen · ? help           "
