crates/board-tui/tests/snapshots/snapshots__size_matrix_card_detail_popup_and_fullscreen__card_detail_popup_60x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
" ◈ herdr-board ● 1 running [  ▾ ][ … ▾ ] [ A ] [ All ] [ R ]"
"────────────────────────────────────────────────────────────"
"┌ Card #5: Refactor auth module                 [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────────────┐│"
"││✗ failed                                                ││"
"│└────────────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────────────┐│"
"││Harness · Model: claude · opus · effort medium · perm   ││"
"││plan                                                    ││"
"│└────────────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────────────┐│"
"││Herdr session: default session · Space: workspace:-     ││"
"│└────────────────────────────────────────────────────────┘│"
"│   [ Edit card ]    [ Duplicate card ]  [ Archive card ]  │"
"│┌Comments ↑↓─────────────────────────────────────────────┐│"
"││ [agent:2] Reviewer: tests missing for token refresh    ││"
"│[ Add comment ]   [ Edit ]     [ Delete ]    [ History ] ││"
"│└────────────────────────────────────────────────────────┘│"
"│┌Runs ↑──────────────────────────────────────────────────┐│"
"│[ Open worker ]  [ Reopen ]     [ Retry ]     [ Cancel ] ││"
"│└────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────┘"
" [ + Card ]   [ Open ]  [ Archive ] [ + Column ][ Edit col ]"
"  [ Del col ]  [ Move column ] [ Template ]    [ ? Help ]   "
